...
                                        <constraints>
                                            <constraint firstAttribute="height" constant="45" id="Mhz-wh-iRz"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Poppins-Bold" family="Poppins" pointSize="11"/>
                                        <color key="tintColor" red="0.1843137255" green="0.27450980390000002" blue="0.42352941179999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Go to Solution"/>
                                        <connections>
                                            <action selector="goToHomeWith_sender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="eSU-7M-f7X"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" red="0.18431372549019609" green="0.27450980392156865" blue="0.42352941176470588" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
