...
        backView.constraint(equalToTop: vc.view.topAnchor, equalToBottom: vc.view.bottomAnchor, equalToLeft: vc.view.leadingAnchor, equalToRight: vc.view.trailingAnchor)
        backView.backgroundColor = UIColor.white
        
        
        input.constraint(height: 40)
        input.borderStyle = .none
        input.placeholder = "Search"
        input.font = Constants.lightFont(size: 12)
        input.delegate = vc
    
        input.textColor = .darkGray
        input.isUserInteractionEnabled = true
        
...
